# openswr-mesa

./: README.md  configure.ac
src/gallium/: Makefile.am  SConscript
src/gallium/auxiliary/gallivm/: lp_bld_sample.h  lp_bld_tgsi.h
src/gallium/auxiliary/target-helpers/: inline_sw_helper.h  inline_wrapper_sw_helper.h
src/gallium/drivers/swr/: Automake.inc  Makefile.am  Makefile.sources  SConscript  swr_clear.cpp  swr_context.cpp  swr_context.h  swr_draw.cpp  swr_fence.cpp  swr_fence.h  swr_public.h  swr_query.h  swr_resource.h  swr_screen.cpp  swr_shader.cpp  swr_shader.h  swr_state.cpp  swr_state.h
src/gallium/drivers/swr/rasterizer/common/: formats.cpp  formats.h  os.h  rdtsc_buckets.cpp  rdtsc_buckets.h  simdintrin.h  swr_assert.cpp  swr_assert.h
src/gallium/drivers/swr/rasterizer/core/: api.cpp  api.h  arena.cpp  arena.h  backend.cpp  backend.h  clip.h  context.h  depthstencil.h  fifo.hpp  format_conversion.h  format_traits.h  format_types.h  frontend.cpp  frontend.h  knobs.h  multisample.h  pa.h  pa_avx.cpp  rasterizer.cpp  rasterizer.h  rdtsc_core.cpp  rdtsc_core.h  state.h  threads.cpp  threads.h  tilemgr.cpp  tilemgr.h  utils.h
src/gallium/drivers/swr/rasterizer/jitter/: JitManager.cpp  JitManager.h  blend_jit.cpp  blend_jit.h  builder.cpp  builder.h  builder_gen.cpp  builder_gen.h  builder_misc.cpp  builder_misc.h  builder_x86.cpp  builder_x86.h  fetch_jit.cpp  jit_api.h  streamout_jit.cpp  streamout_jit.h
src/gallium/drivers/swr/rasterizer/jitter/scripts/: gen_llvm_types.py
src/gallium/drivers/swr/rasterizer/memory/: LoadTile.cpp  StoreTile.cpp  TilingFunctions.h  tilingtraits.h
src/gallium/drivers/swr/rasterizer/scripts/: gen_knobs.py  knob_defs.py
src/gallium/drivers/swr/rasterizer/scripts/templates/: knobs.template
src/gallium/targets/libgl-xlib/: Makefile.am  SConscript
